# movie-expert-agent

./: CLAUDE.md  pyproject.toml
semiconductor-agent/: .gitignore  CLAUDE.md  README.md  chainlit_app.py  main.ipynb  pyproject.toml
semiconductor-agent/scripts/: daily.py  weekly_review.py
semiconductor-agent/semiconductor/adapters/: graph.py  state.py  tools.py
semiconductor-agent/semiconductor/adapters/nodes/: aptitude_test.py  behavioral_coach.py  diagnostic.py  essay_coach.py  mock_interviewer.py  orchestrator.py  qa_coach.py  web_enrichment.py
semiconductor-agent/semiconductor/application/use_cases/: coach_behavioral.py  coach_concept.py  coach_essay.py  critique_evaluation.py  diagnose_session.py  evaluate_answer.py  next_question.py
semiconductor-agent/semiconductor/domain/: entities.py  ports.py
semiconductor-agent/semiconductor/infrastructure/aptitude/: __init__.py  questions.py
semiconductor-agent/tests/adapters/: test_aptitude_test.py  test_behavioral_coach.py  test_essay_coach.py  test_graph_integration.py  test_memory_and_parallel.py  test_mock_interviewer.py  test_orchestrator.py  test_qa_coach_react.py
semiconductor-agent/tests/application/: test_use_cases.py
semiconductor-agent/tests/domain/: test_entities.py
semiconductor-agent/tests/infrastructure/: test_calculator.py  test_llm_service.py  test_question_bank.py  test_safety.py  test_tiers.py  test_usage_log.py  test_vision.py  test_web_search.py
storybook-agent/: CLAUDE.md  main.ipynb  pyproject.toml
storybook-agent/.ipynb_checkpoints/: main-checkpoint.ipynb
storybook-agent/storybook/: agent.py  prompt.py
storybook-agent/storybook/domain/: models.py
storybook-agent/storybook/infrastructure/: imagen_client.py
storybook-agent/storybook/sub_agents/: illustrator.py  page_illustrator.py  story_writer.py
(+108 files in other folders)
