[project]
name = "semiconductor-agent"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    "matplotlib>=3.9.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.1.1",
    "jupyter>=1.1.1",
    "ipykernel>=6.29.0",
    "chainlit>=2.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["semiconductor"]

[dependency-groups]
dev = ["pytest>=8.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
